# map_services

./: README.md
excavations_webmap/: README.md  environment.yml  excavations_map.html  flask_app.py  pyproject.toml  webmap_folium.py
excavations_webmap/data/: amfissa_buildings.geojson  amfissa_roads.geojson  ancient_fortess.geojson  ancient_wall.geojson  appstyles.json  categories.json  excavation_ruins.geojson  excavation_ruins_last_update2.gpkg  marks_dropdown.json  marks_rangeslider.json  timeline_dic.json
excavations_webmap/static/: styles.css
rs_download_API/: LICENSE  README.md  Webmap-Dash.ipynb  environment.yml  examplemap.html  flask_app.py  pyproject.toml  requirements.txt  rs_utils.py
